# layer-values-dashboard

./: .gitignore  README.md  README_MULTIPLE_INSTANCES.md  create_sample_data.py  env.example  example_table.csv  force_historical_collection.py  main_old.py  maximal_power_historical_1750428423.json  monitor_dashboard.py  nginx-complete.conf  nginx-ssl.conf  nginx.conf  populate_historical_maximal_power.py  pyproject.toml  query_mappings.json  setup-nginx.sh  start_dashboard.py  test_endpoints.py  test_power_of_aggr.py
backend/: main.py
chain_queries/: README.md  __init__.py  example_output.yaml  find_maximal_power.py  reporter_fetcher.py  test_integration.py
frontend/: app.js  index.html  query_mappings.json  reporters.html  search.html  search.js  style.css
